Notebook 2nd try

--- a/scripts/compress.ipynb
+++ b/scripts/compress.ipynb
@@ -390,15 +390,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 538,
    "id": "b7c5663d-8ef9-4593-9e34-f8eeb62ce057",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 538,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "i, j = 0, 1\n",
-    "k, c = 1, 2\n",
+    "k, c = 0, 1\n",
     "\n",
-    "(X[i, :, None]@Y[j, None, :])[k, c], X[i, k]*X[j, c]*"
+    "(X[i, :, None]@Y[j, None, :])[k, c] - X[i, k]*Y[j, c]"
    ]
   },
   {
